# connpass-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
examples/: get_events_with_various_queries.rs  get_single_event.rs  get_single_event_blocking.rs
src/: client.rs  errors.rs  lib.rs  response.rs
src/client/: mod.rs
src/query/: builder.rs  error.rs  mod.rs  types.rs  validator.rs
