[package]
name = "connpass-rs"
version = "0.1.0"
edition = "2018"

license = "MIT"
description = "An api client for connpass.com"
repositroy = "https://github.com/yuk1ty/connpass-rs"
readme = "README.md"
keywords = ["connpass"]

[dependencies]
reqwest = { version = "0.11.5", features = ["json"] }
tokio = { version = "1.12.0", features = ["full"] }
serde = { version = "1.0.130", features = ["derive"] }
once_cell = "1.8.0"
thiserror = "1.0.30"

[features]
blocking = ["reqwest/blocking"]

[[example]]
name = "get_single_event"

[[example]]
name = "get_events_with_various_queries"

[[example]]
name = "get_single_event_blocking"